--- a/estilonenu.css
+++ b/estilonenu.css
@@ -83,6 +83,17 @@ img{
     flex-wrap: wrap;
     
 }
+
+h2 {
+    text-align: center;
+}
+
+.contenedor-formulario{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
 .formulario{
     background-color: rgb(134, 133, 133);
     width: min( 60rem, 100% );
@@ -122,6 +133,7 @@ iframe{
         color: white;
     }
 }
+
 
 
 
